<resources>
    <string name="app_name">RishikeshProject</string>
    <string name="select_photo">Select Photo</string>
    <string name="open_camera">Open Camera</string>
    <string name="pick_from_gallery">Pick from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="permissionRequired">"Permission Requird "</string>
    <string name="alert">Alert</string>
    <string name="ok">Ok</string>
    <string name="openSettings">Open Settings</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="already_have_an_account">Already have an account?-</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="enter_dob">Enter DOB</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="enter_email">Enter Email</string>
    <string name="email">Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
</resources>